envoy.yaml
static_resources:
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 9999
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config: 
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: auto
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: backend
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: app
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: app
      connect_timeout: 0.25s
      type: strict_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: app
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: app1
                      port_value: 9000
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: app2
                      port_value: 9000
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: app3
                      port_value: 9000
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: app4
                      port_value: 9000
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: app5
                      port_value: 9000
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: app6
                      port_value: 9000
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: app7
                      port_value: 9000
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: app8
                      port_value: 9000
